# luhack-web-lab

./: .env.example  README.md  docker-compose.yml
csrf/: pyproject.toml  start_csrf.sh
csrf/luhack_csrf/: site.py
csrf/luhack_csrf/templates/: bank.j2  kerry.j2  main.j2
index/: .dockerignore  pyproject.toml  start_index.sh
index/luhack_index/: site.py
index/luhack_index/templates/: main.j2
sqli/: .dockerignore  Dockerfile  init.sql  pyproject.toml  start_sqli.sh
sqli/luhack_sqli/: site.py
sqli/luhack_sqli/templates/: main.j2
ssti/: pyproject.toml  start_ssti.sh
ssti/luhack_ssti/: site.py  templater.py
ssti/luhack_ssti/templates/: main.j2
